[gd_scene load_steps=11 format=2]

[ext_resource path="res://Comparar y decidir/resource/fondo/cyd_background_final.png" type="Texture" id=1]
[ext_resource path="res://assets/audio/lazy-village-15547.mp3" type="AudioStream" id=2]
[ext_resource path="res://Comparar y decidir/comparar_y_decidir.gd" type="Script" id=3]
[ext_resource path="res://Comparar y decidir/resource/bd/bd_lvl1.tres" type="Resource" id=4]
[ext_resource path="res://Comparar y decidir/top bar cyd/top_bar_minigames.tscn" type="PackedScene" id=5]
[ext_resource path="res://Comparar y decidir/resource/bd/bd_lvl2.tres" type="Resource" id=6]
[ext_resource path="res://Comparar y decidir/resource/bd/bd_lvl3.tres" type="Resource" id=7]
[ext_resource path="res://Comparar y decidir/resource/vectores/wrong-removebg-preview.png" type="Texture" id=8]
[ext_resource path="res://Comparar y decidir/resource/vectores/right-removebg-preview (1).png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/fontTrivia.tres" type="DynamicFont" id=10]

[node name="level_comparar_y_decidir" type="Control"]
margin_top = 1.0
margin_right = 446.0
margin_bottom = 705.0
script = ExtResource( 3 )
bd_cyd = ExtResource( 4 )
bd_cyd2 = ExtResource( 6 )
bd_cyd3 = ExtResource( 7 )
color_right = ExtResource( 9 )
color_wrong = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -2.0
margin_right = 446.0
margin_bottom = 704.0
texture = ExtResource( 1 )

[node name="question_info" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 127.0
margin_right = 382.0
margin_bottom = 242.0

[node name="txt_question" type="Label" parent="question_info"]
margin_top = 7.0
margin_right = 322.0
margin_bottom = 107.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 6
custom_colors/font_color = Color( 0.0705882, 0.054902, 0.054902, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 10 )
align = 1
valign = 1
autowrap = true

[node name="question_holder" type="VBoxContainer" parent="."]
margin_left = 69.0
margin_top = 239.0
margin_right = 369.0
margin_bottom = 679.0
rect_min_size = Vector2( 300, 250 )
size_flags_vertical = 3
custom_constants/separation = 20

[node name="boton_opc2" type="TextureButton" parent="question_holder" groups=["botoncyd"]]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )

[node name="boton_opc" type="TextureButton" parent="question_holder" groups=["botoncyd"]]
margin_top = 220.0
margin_right = 300.0
margin_bottom = 420.0
rect_min_size = Vector2( 300, 200 )

[node name="top_bar_minigames" parent="." instance=ExtResource( 5 )]

[node name="ntexto_pregunta" type="Label" parent="."]
margin_left = 375.0
margin_top = 57.0
margin_right = 415.0
margin_bottom = 85.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
text = "- 5"

[node name="numero_pregunta" type="Label" parent="." groups=["npregunta"]]
margin_left = 360.0
margin_top = 57.0
margin_right = 378.0
margin_bottom = 82.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
autowrap = true

[node name="fondo" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -1 )
stream = ExtResource( 2 )
autoplay = true
bus = "MUSICA"
